--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -82,15 +82,17 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:textAllCaps="false"
-        android:layout_alignParentStart="true"
         android:layout_below="@id/register_account_link"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="162dp"
+        android:layout_marginLeft="162dp"
         android:layout_marginTop="19dp"
         android:text="or Login with"
+        android:textAllCaps="false"
         android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_alignParentLeft="true" />
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
