--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,74 +7,66 @@
     android:background="@drawable/register"
     tools:context=".SetupActivity">
 
-    <ds.hdodenhof.circleimageview.CircleImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:marginTop="22dp"
-        android:src="@drawable/profile"
-        android:alignParentTop="true"
+        android:layout_marginTop="31dp"
+        android:src="@drawable/profile" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="username"
+        android:inputType="textMultiLine"
+        android:background="@drawable/inputs"
+        android:padding="14dp"
+        android:drawableLeft="@drawable/username"
         />
 
     <EditText
-        android:id="@+id/setup_username"
+        android:id="@+id/editText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="7dp"
-        android:background="@drawable/inputs"
-        android:drawableLeft="@drawable/username"
+        android:layout_below="@+id/editText"
         android:ems="10"
-        android:hint="user name..."
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="23dp"
+        android:hint=" full name"
         android:inputType="textMultiLine"
-        android:padding="14dp" />
+        android:background="@drawable/inputs"
+        android:padding="14dp"
+        android:drawableLeft="@drawable/username"/>
 
     <EditText
-        android:id="@+id/setup_full_name"
+        android:id="@+id/editText3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/setup_username"
+        android:layout_below="@+id/editText2"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="7dp"
-        android:background="@drawable/inputs"
-        android:drawableLeft="@drawable/name"
+        android:layout_marginTop="27dp"
         android:ems="10"
-        android:hint="Full Name"
+        android:hint="country"
         android:inputType="textMultiLine"
-        android:padding="14dp" />
-
-    <EditText
-        android:id="@+id/setup_country_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/setup_full_name"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="7dp"
         android:background="@drawable/inputs"
-        android:drawableLeft="@drawable/country"
-        android:ems="10"
-        android:hint="Country"
-        android:inputType="textMultiLine"
-        android:padding="14dp" />
+        android:padding="14dp"
+        android:drawableLeft="@drawable/country"/>
 
     <Button
-        android:id="@+id/setup_information_button"
-        android:layout_width="200dp"
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/setup_country_name"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="34dp"
-        android:background="@drawable/button"
-        android:padding="20sp"
-        android:text="Save"
-        android:textAllCaps="false"
-        android:textColor="@android:color/background_light"
-        android:textStyle="bold" />
-
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="165dp"
+        android:layout_marginRight="165dp"
+        android:layout_marginBottom="86dp"
+        android:text="Save" />
 </RelativeLayout>
