--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#a03939</color>
     <color name="colorAccent">#eeebda</color>
     <color name="sendercolor">#eda</color>
+    <color name="colorProfile">#3B4041</color>
+    <color name="mainBackgroun">#D7D7D7</color>
 </resources>
