--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -1,6 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/login"
+    tools:context=".ResetPasswordActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <include
+        android:id="@+id/forget_password_toolbar"
+        layout="@layout/app_bar_layout"></include>
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/text3"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/forget_password_toolbar"
+        android:layout_marginTop="100dp"
+        android:text="We will mail you alink after when you provide email and click the send button. Please click on that link to reset your password"
+        android:textAlignment="center"
+        android:textColor="@android:color/background_dark"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:padding="19dp"
+        tools:layout_editor_absoluteX = "149dp"
+        tools:layout_editor_absoluteY = "197dp"
+        android:layout_alignParentLeft="true" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/reset_password_EMAIL"
+        android:layout_below="@+id/text3"
+        android:ems="10"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/inputs"
+        android:layout_marginLeft="15dp"
+        android:padding="15dp"
+        android:layout_marginRight="15dp"
+        android:hint="write your email here..."
+        android:inputType="textEmailAddress"
+        />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/reset_password_email_button"
+        android:layout_below="@+id/reset_password_EMAIL"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="21dp"
+        android:background="@drawable/button"
+        android:text ="Send Email"
+        android:layout_marginRight="60dp"
+        android:layout_marginLeft="60dp"
+        android:textColor="@android:color/background_light"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+
+
+
+
+
+
+        />
+
+</RelativeLayout>
