--- a/app/src/main/res/drawable/inputs.xml
+++ b/app/src/main/res/drawable/inputs.xml
@@ -2,5 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#fff"
+    <solid android:color="#ffffff"></solid>
+
+    <corners android:radius="30dp"></corners>
 </shape>
