--- a/app/src/main/res/layout/all_posts_layout.xml
+++ b/app/src/main/res/layout/all_posts_layout.xml
@@ -35,15 +35,16 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/post_user_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="user name"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="8dp"
+                    android:text="user name"
                     android:textAlignment="textStart"
+                    android:textColor="@android:color/black"
                     android:textSize="16sp"
-                    android:textstyle="bold"
-                    android:textColor="@android:color/black"/>
+                    android:textstyle="bold" />
 
                     <LinearLayout
                     android:layout_width="match_parent"
