--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,6 @@
         <include
             android:id="@+id/main_page_toolbar"
             layout="@layout/app_bar_layout">
-
         </include>
 
         <FrameLayout
@@ -30,8 +29,10 @@
                 android:id="@+id/all_users_post_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_alignStart="@+id/main_container" />
+                android:layout_alignStart="@+id/main_container"
+                android:layout_alignLeft="@+id/main_container" />
         </FrameLayout>
+
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
@@ -41,8 +42,5 @@
         android:layout_gravity="start"
         android:layout_marginBottom="3dp"
         app:menu="@menu/navigation_menu">
-
     </android.support.design.widget.NavigationView>
-
-
 </android.support.v4.widget.DrawerLayout>
