--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -20,7 +20,8 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="20dp"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/select_image" />
+        app:srcCompat="@drawable/select_image"
+        android:layout_alignParentLeft="true" />
 
     <EditText
         android:id="@+id/post_description"
