--- a/app/src/main/res/layout/activity_click_post.xml
+++ b/app/src/main/res/layout/activity_click_post.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_margin="10dp"
-        app:srcCompact = "@drawable/select_image"
+        app:srcCompat = "@drawable/select_image"
         android:layout_alignParentLeft="true" />
 
 
