--- a/app/src/main/res/layout/activity_friends.xml
+++ b/app/src/main/res/layout/activity_friends.xml
@@ -18,15 +18,14 @@
         android:textAlignment="center"
         android:textColor="@android:color/background_light"
         android:textSize="25sp"
-        android:textStyle="bold"
-        android:textsize="50sp" />
+        android:textStyle="bold" />
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/friend_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentstart="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/all_friends"
         android:layout_margin="15dp"/>
 
