--- a/app/src/main/res/layout/all_posts_layout.xml
+++ b/app/src/main/res/layout/all_posts_layout.xml
@@ -44,7 +44,7 @@
                     android:textAlignment="textStart"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
-                    android:textstyle="bold" />
+                    android:textStyle="bold" />
 
                     <LinearLayout
                     android:layout_width="match_parent"
@@ -58,8 +58,8 @@
                             android:layout_height="wrap_content"
                             android:text="has been updated a post"
                             android:textColor="@android:color/darker_gray"
-                            android:textsize="13sp"
-                            android:textstyle="bold"/>
+                            android:textSize="13sp"
+                            android:textStyle="bold"/>
 
                         <TextView
                             android:id="@+id/post_date"
@@ -67,7 +67,7 @@
                             android:layout_height="wrap_content"
                             android:text="Date"
                             android:textColor="@android:color/black"
-                            android:textsize="13sp" />
+                            android:textSize="13sp" />
 
                         <TextView
                             android:id="@+id/post_time"
@@ -88,7 +88,7 @@
             android:layout_marginLeft="3dp"
             android:layout_marginRight="3dp"
             android:padding="3dp"
-            android:textsize="14sp"
+            android:textSize="14sp"
             android:textColor="@android:color/black"/>
 
         <ImageView
