--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#d17070</color>
     <color name="colorPrimaryDark">#a03939</color>
     <color name="colorAccent">#eeebda</color>
-    <color name="sendercolor">#eda</color>
+    <color name="sendercolor">#A0179E</color>
     <color name="colorProfile">#3B4041</color>
     <color name="mainBackgroun">#D7D7D7</color>
 </resources>
