--- a/app/src/main/res/drawable/sender_message_text_background.xml
+++ b/app/src/main/res/drawable/sender_message_text_background.xml
@@ -5,6 +5,5 @@
     <solid
         android:color="@color/sendercolor"></solid>
 
-    <corners
-        android:radius="15dp"></corners>
+    <corners android:radius="15dp"></corners>
 </shape>
