--- a/app/src/main/res/layout/chat_custom_bar.xml
+++ b/app/src/main/res/layout/chat_custom_bar.xml
@@ -26,7 +26,8 @@
         android:layout_marginTop="8dp"
         android:textStyle="bold"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"/>
 
 
 
