--- a/app/src/main/res/layout/activity_my_post.xml
+++ b/app/src/main/res/layout/activity_my_post.xml
@@ -14,4 +14,15 @@
 
     </include>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_all_posts_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="96dp"
+        android:layout_marginLeft="96dp"
+        android:layout_marginBottom="294dp" />
+
 </RelativeLayout>
