--- a/app/src/main/res/layout/all_users_display_layout.xml
+++ b/app/src/main/res/layout/all_users_display_layout.xml
@@ -19,19 +19,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="5dp"
         >
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/all_users_profile_full_name"
-            android:text="user full name"
-            android:textAlignment="textStart"
-            android:textColor="@android:color/background_light"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:gravity="start" />
+            android:orientation="horizontal"
+            android:layout_margin="5dp"
+            >
+
+            <TextView
+                android:layout_width="190dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/all_users_profile_full_name"
+                android:text="user full name"
+                android:textAlignment="textStart"
+                android:textColor="@android:color/background_light"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:gravity="start" />
+
+                <ImageView
+                    android:id="@+id/all_users_online_icon"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/online"
+                    android:visibility="invisible"/>
+
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
@@ -42,5 +57,6 @@
             android:textColor="@android:color/background_light"
             android:textSize="16sp"
             android:gravity="start" />
+
     </LinearLayout>
 </LinearLayout>
