--- a/app/src/main/res/layout/message_layout_of_users.xml
+++ b/app/src/main/res/layout/message_layout_of_users.xml
@@ -18,6 +18,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="2dp"
         android:layout_toEndOf="@+id/message_profile_image"
+        android:layout_toRightOf="@+id/message_profile_image"
         android:background="@drawable/receiver_message_text_background"
         android:text="receiver messages"
         android:textColor="@android:color/background_light"
@@ -30,6 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="2dp"
         android:layout_alignParentTop="@+id/receiver_message_text"
         android:background="@drawable/sender_message_text_background"
