--- a/app/src/main/res/layout/all_posts_layout.xml
+++ b/app/src/main/res/layout/all_posts_layout.xml
@@ -42,6 +42,7 @@
                     android:layout_marginTop="8dp"
                     android:text="user name"
                     android:textAlignment="textStart"
+                    android:layout_gravity="start"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     android:textStyle="bold" />
